--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ME</title>
+    <title>Gallery</title>
 <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <!-- Bootstrap 3.3.7 -->
@@ -135,6 +135,18 @@
                     <li><a href="social.html"><i class="fa fa-circle-o"></i> Social Network</a></li>
                     <li><a href="direct.html"><i class="fa fa-circle-o"></i> Direct</a></li>
                 </ul>
+            </li>
+            <li class="treeview">
+              <a href="#">
+                <i class="fa fa-laptop"></i>
+                <span>My Works</span>
+                <span class="pull-right-container">
+                  <i class="fa fa-angle-left pull-right"></i>
+                </span>
+              </a>
+              <ul class="treeview-menu">
+                <li><a href="guessn.html"><i class="fa fa-circle-o"></i>Guessing number</a></li>
+              </ul>
             </li>
           <!-- /.sidebar -->
         </aside>
