--- a/guessn.html
+++ b/guessn.html
@@ -148,7 +148,7 @@
                     <i class="fa fa-angle-left pull-right"></i>
                   </span>
                 </a>
-                <ul class="treeview-menu">
+                <ul class="treeview-menu" style="display: none;">
                   <li><a href="guessn.html"><i class="fa fa-circle-o"></i>Guessing number</a></li>
                 </ul>
               </li>
@@ -168,7 +168,8 @@
               <b>My Works</b>
             </h1>
             <ol class="breadcrumb">
-              <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+              <li><a href="guessn.html"><i class="fa fa-home"></i> My Works</a></li>
+              <li class="active">Guessing Number</li>
             </ol>
           </section>
       
