--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <i class="fa fa-angle-left pull-right"></i>
                   </span>
                 </a>
-                <ul class="treeview-menu">
+                <ul class="treeview-menu" style="display: none;">
                   <li><a href="guessn.html"><i class="fa fa-circle-o"></i>Guessing number</a></li>
                 </ul>
               </li>
