--- a/guessn.html
+++ b/guessn.html
@@ -138,6 +138,7 @@
                 <ul class="treeview-menu">
                   <li><a href="social.html"><i class="fa fa-circle-o"></i> Social Network</a></li>
                   <li><a href="direct.html"><i class="fa fa-circle-o"></i> Direct</a></li>
+                  <li><a href="contact.html"><i class ="fa fa-circle-o"></i> Contact Form</a></li>
                 </ul>
               </li>
               <li class="treeview">
