--- a/direct.html
+++ b/direct.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>//dfdfdf
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -134,6 +134,7 @@
                 <ul class="treeview-menu" style="display: none;">
                     <li><a href="social.html"><i class="fa fa-circle-o"></i> Social Network</a></li>
                     <li><a href="direct.html"><i class="fa fa-circle-o"></i> Direct</a></li>
+                    <li><a href="contact.html"><i class ="fa fa-circle-o"></i> Contact Form</a></li>
                 </ul>
             </li>
             <li class="treeview">
