--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionic/1.3.2/css/ionic.min.css">
 <!-- Theme style -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.18/css/AdminLTE.min.css">
+<link rel="stylesheet" href="contact.css">
 <!-- AdminLTE Skins. Choose a skin from the css/skins
      folder instead of downloading all of them to reduce the load. -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.18/css/skins/_all-skins.min.css">
@@ -177,7 +178,7 @@
               <div class="box-header ui-sortable-handle" style="cursor: move;">
                 <i class="fa fa-envelope"></i>
   
-                <h3 class="box-title">Direct Message</h3>
+                <h3 class="box-title">Contact Form</h3>
                 <!-- tools box -->
                 
                 <!-- /. tools -->
@@ -185,13 +186,20 @@
               <div class="box-body">
                 <form action="#" method="post">
                   <div class="form-group">
-                    <input type="text" class="form-control" name="emailto" placeholder="From:">
+                    <input type="text" class="form-control" name="emailto" placeholder="Name">
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject">
+                    <input type="radio" name="gender" value width="Male">
+                    male
+                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    <input type="radio" name="gender" value width="Female">
+                    female
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" name="message" placeholder="Enter Message...">
+                    <input type="email" class="form-control" name="email" placeholder="Email">
+                  </div>
+                  <div class="form-group">
+                    <input type="textarea" class="form-control" name="detail" placeholder="Detail">
                   </div>
               <div>
                 
