--- a/contact.html
+++ b/contact.html
@@ -176,7 +176,7 @@
           <section  class="content" >
             <div class="container-fluid">
               <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-lg-12 col-md-12 col-xs-12">
                       <div class="box box-info">
                         <div class="box-header">
                           <i class="fa fa-edit"></i>
@@ -209,7 +209,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-lg-12 col-md-12 col-xs-12">
                     <div class="box">
                     <div class="box-header">
                       <i class="fa fa-users"></i>
@@ -222,7 +222,7 @@
                   </div>
                 </div>
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12 col-md-12 col-xs-12">
                   <div class="box box-danger">
                       <div class="box-header">
                         <i class="fa fa-commenting"></i>
@@ -249,7 +249,7 @@
       
                       </div>
                   </div>
-                  <div id="donutchart" style="width: 450px; height: 400px; ">
+                  <div class="col-lg-12 col-md-12 col-xs-12" id="donutchart" style="width: 450px; height: 400px; ">
                   
                   </div>
                 </div>
